# Wavespace

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
include/: VBO.hpp
include/glad/: glad.h
src/: VBO.cpp  glad.c  main.cpp
